Fri Jan 23 22:49:52 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gutils.c (g_get_any_init): Sigh, protect against
	pw->pw_gecos being "" as well.  (#132317, Kaj-Michael Lang)
	
2004-01-23  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add new functions.

	* glib/grand.c: Don't include <unistd.h> unless
	HAVE_UNISTD_H. Include <process.h> on G_OS_WIN32.
	(g_rand_new): Use getppid() only on G_OS_UNIX.

Thu Jan 22 15:16:11 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.2 ===

Thu Jan 22 13:55:44 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gtimer.c: Add g_timer_continue().
	(#98536, Tim-Philipp Müller)

	* configure.in: Version 2.3.2, interface age 0.

	* NEWS: tweak, finish.

Thu Jan 22 20:50:55 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gutils.c (g_get_any_init): Protect against
	pw->pw_gecos being NULL.

Thu Jan 22 00:41:34 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gutils.c (g_get_any_init): Don't treat the Win32
	user name like a gecos field, and when extracting a real
	name from a gecos field, replace '&' by the capitalized
	user name (a traditional passwd feature).  
	(#118973, reported by Soeren Boll Overgaard)

Tue Jan 20 22:31:22 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Start of 2.3.2 section.

Fri Jan 16 21:45:56 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gstring.c (g_string_ascii_up): Forgot to fix this one.

Thu Jan 15 22:35:04 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gstring.c (g_string_up): 
	* glib/gstring.c (g_string_down): 
	* glib/gstring.c (g_string_ascii_down): Move initialization of
	variables after g_return_val_if_fail.  (#131564, Olivier Poncet)

Sun Jan 11 16:13:20 2004  Manish Singh  <yosh@gimp.org>

	* configure.in: Add G_MAXSIZE, define in terms of G_MAXUfoo.

	* tests/type-test.c: Add test for G_MAXSIZE.

	* glibconfig.h.win32.in: Cleanup, add some missing bits.

Sun Jan 11 16:05:35 2004  Manish Singh  <yosh@gimp.org>

	* glib/giounix.c: #define _POSIX_SOURCE for SSIZE_MAX. Fixes #128853.