@@ -1,3 +1,11 @@
+Wed Jan 28 01:39:21 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* glib/gstrfuncs.h: 
+	* glib/gstrfuncs.c (g_strsplit_set): New function, a cross 
+	between g_strsplit() and strtok().  (#88329, Soeren Sandmann)
+
+	* tests/strfunc-test.c (main): Add g_strsplit_set() tests.
+	
 Fri Jan 23 22:49:52 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* glib/gutils.c (g_get_any_init): Sigh, protect against
